added favicon, updated titles on games page and a way to indocate which page the user is on

--- a/index.html
+++ b/index.html
@@ -9,6 +9,10 @@
     <link rel="stylesheet" href="css/styles.css">
     <script src="https://kit.fontawesome.com/f6ecbff17b.js" crossorigin="anonymous"></script>
     <title> Gamehub | Home </title>
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+    <link rel="manifest" href="/site.webmanifest">
     <!-- Hotjar Tracking Code for https://gamehub-interaction-design.netlify.app/ -->
     <script>
         (function (h, o, t, j, a, r) {
@@ -29,23 +33,22 @@
             <input type="checkbox" id="menu-checkbox">
             <label for="menu-checkbox" class="hamburger-icon"><i class="fas fa-bars fa-2xl"></i></label>
             <nav>
-                <a href="index.html">Home</a>
+                <a href="/" class="active">Home</a>
                 <a href="games.html">Games</a>
                 <a href="contact.html">Contact</a>
                 <a href="about.html">About</a>
             </nav>
-            <a href="index.html"><img src="images/GameHub_Logo.png" alt="gamehub logo" class="logo-header"></a>
-            <a href="checkout-page.html"><i class="fa-solid fa-cart-shopping fa-xl icon-cart"></i></a>
-
+            <a href="/"><img src="images/GameHub_Logo.png" alt="gamehub logo" class="logo-header"></a>
+            <a href="checkout-page.html"><i class="fa-solid fa-cart-shopping fa-xl icon-cart"><span
+                        class="shopping-cart">0</span></i></a>
             <a href=" contact.html"><i class="fa-regular fa-user fa-xl icon-user"></i></a>
-            </div>
         </section>
     </header>
     <main>
         <section class="topbar-homepage">
-            <Section class="h1heading-homepage">
+            <section class="h1heading-homepage">
                 <h1>Welcome to Gamehub!</h1>
-            </Section>
+            </section>
             <p class="top-text"> <i>The internet's leading site for new and second-hand games!</i></p>
             <section class="first-section-homepage">
                 <section id="first-section-text">
@@ -64,21 +67,21 @@
 
     <footer>
         <section class="contact-info-footer">
-            <Section class="contact-text-footer">
-                <Section class="info-footer">
+            <section class="contact-text-footer">
+                <section class="info-footer">
                     <p class="text-footer">Address:</p>
                     <p class="text-footer">1234 Street,Town </p>
                     <p class="text-footer">State, 09765, Country</p>
-                </Section>
-                <Section class="info-footer">
+                </section>
+                <section class="info-footer">
                     <p class="text-footer">Email:</p>
                     <p class="text-footer">post@gamehub.com</p>
-                </Section>
-                <Section class="info-footer">
+                </section>
+                <section class="info-footer">
                     <p class="text-footer">Phone:</p>
                     <p class="text-footer">09645725</p>
-                </Section>
-            </Section>
+                </section>
+            </section>
 
             <section class="social-media">
                 <nav class="footer-social">
