--- a/about.html
+++ b/about.html
@@ -9,6 +9,10 @@
     <link rel="stylesheet" href="css/styles.css">
     <script src="https://kit.fontawesome.com/f6ecbff17b.js" crossorigin="anonymous"></script>
     <title>Gamehub | About</title>
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+    <link rel="manifest" href="/site.webmanifest">
     <!-- Hotjar Tracking Code for https://gamehub-interaction-design.netlify.app/ -->
     <script>
         (function (h, o, t, j, a, r) {
@@ -28,13 +32,14 @@
             <input type="checkbox" id="menu-checkbox">
             <label for="menu-checkbox" class="hamburger-icon"><i class="fas fa-bars fa-2xl"></i></label>
             <nav>
-                <a href="index.html">Home</a>
+                <a href="/">Home</a>
                 <a href="games.html">Games</a>
                 <a href="contact.html">Contact</a>
-                <a href="about.html">About</a>
+                <a href="about.html" class="active">About</a>
             </nav>
             <a href="index.html"><img src="images/GameHub_Logo.png" alt="gamehub logo" class="logo-header"></a>
-            <a href="checkout-page.html"><i class="fa-solid fa-cart-shopping fa-xl icon-cart view-cart"></i></a>
+            <a href="checkout-page.html"><i class="fa-solid fa-cart-shopping fa-xl icon-cart view-cart"><span
+                        class="shopping-cart">0</span></i></a>
 
             <a href=" contact.html"><i class="fa-regular fa-user fa-xl icon-user"></i></a>
             </div>
