--- a/contact.html
+++ b/contact.html
@@ -9,6 +9,10 @@
     <link rel="stylesheet" href="css/styles.css">
     <script src="https://kit.fontawesome.com/f6ecbff17b.js" crossorigin="anonymous"></script>
     <title>Gamehub | Contact</title>
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+    <link rel="manifest" href="/site.webmanifest">
     <!-- Hotjar Tracking Code for https://gamehub-interaction-design.netlify.app/ -->
     <script>
         (function (h, o, t, j, a, r) {
@@ -28,13 +32,14 @@
             <input type="checkbox" id="menu-checkbox">
             <label for="menu-checkbox" class="hamburger-icon"><i class="fas fa-bars fa-2xl"></i></label>
             <nav>
-                <a href="index.html">Home</a>
+                <a href="/">Home</a>
                 <a href="games.html">Games</a>
-                <a href="contact.html">Contact</a>
+                <a href="contact.html" class="active">Contact</a>
                 <a href="about.html">About</a>
             </nav>
             <a href="index.html"><img src="images/GameHub_Logo.png" alt="gamehub logo" class="logo-header"></a>
-            <a href="checkout-page.html"><i class="fa-solid fa-cart-shopping fa-xl icon-cart view-cart"></i></a>
+            <a href="checkout-page.html"><i class="fa-solid fa-cart-shopping fa-xl icon-cart view-cart"><span
+                        class="shopping-cart">0</span></i></a>
 
             <a href=" contact.html"><i class="fa-regular fa-user fa-xl icon-user"></i></a>
             </div>
@@ -42,9 +47,9 @@
     </header>
     <main>
         <section class="h1heading topbar-contactpage">
-            <Section>
+            <section>
                 <h1>Contact us:</h1>
-            </Section>
+            </section>
             <section>
                 <img src="images/GameHub_Logo.png" alt="the logo for Gamehub" class="gameimage-contact">
             </section>
@@ -81,16 +86,13 @@
             <section>
                 <i class="fa-solid fa-location-dot fa-2xl direct-contact-icons"></i>
             </section>
-
             <section>
                 <i class="fa-solid fa-envelope fa-2xl direct-contact-icons"></i>
             </section>
-
             <section>
                 <i class="fa-solid fa-phone fa-2xl direct-contact-icons"></i>
             </section>
         </section>
-
         <section class="container-direct-contact">
             <section>
                 <p>1234 Street
@@ -98,11 +100,9 @@
                     09765
                     Country</p>
             </section>
-
             <section>
                 <p>post@gamehub.com</p>
             </section>
-
             <section>
                 <p>09645725</p>
             </section>
@@ -111,22 +111,21 @@
 
     <footer>
         <section class="contact-info-footer">
-            <Section class="contact-text-footer">
-                <Section class="info-footer">
+            <section class="contact-text-footer">
+                <section class="info-footer">
                     <p class="text-footer">Address:</p>
                     <p class="text-footer">1234 Street,Town </p>
                     <p class="text-footer">State, 09765, Country</p>
-                </Section>
-                <Section class="info-footer">
+                </section>
+                <section class="info-footer">
                     <p class="text-footer">Email:</p>
                     <p class="text-footer">post@gamehub.com</p>
-                </Section>
-                <Section class="info-footer">
+                </section>
+                <section class="info-footer">
                     <p class="text-footer">Phone:</p>
                     <p class="text-footer">09645725</p>
-                </Section>
-            </Section>
-
+                </section>
+            </section>
             <section class="social-media">
                 <nav class="footer-social">
                     <ul>
@@ -136,7 +135,6 @@
                     </ul>
                 </nav>
             </section>
-
             <section class="newsletter">
                 <form action="FORM">
                     <input type="email" name="newsletter" id="newsletter" placeholder="Join our newsletter!"
@@ -144,7 +142,6 @@
                     <a href="contact.html" class="cta-input-footer">Submit</a>
                 </form>
             </section>
-
         </section>
     </footer>
 </body>
