--- a/games.html
+++ b/games.html
@@ -9,6 +9,10 @@
     <link rel="stylesheet" href="css/styles.css">
     <script src="https://kit.fontawesome.com/f6ecbff17b.js" crossorigin="anonymous"></script>
     <title>Gamehub | Games </title>
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+    <link rel="manifest" href="/site.webmanifest">
     <!-- Hotjar Tracking Code for https://gamehub-interaction-design.netlify.app/ -->
     <script>
         (function (h, o, t, j, a, r) {
@@ -28,8 +32,8 @@
             <input type="checkbox" id="menu-checkbox">
             <label for="menu-checkbox" class="hamburger-icon"><i class="fas fa-bars fa-2xl"></i></label>
             <nav>
-                <a href="index.html">Home</a>
-                <a href="games.html">Games</a>
+                <a href="/">Home</a>
+                <a href="games.html" class="active">Games</a>
                 <a href="contact.html">Contact</a>
                 <a href="about.html">About</a>
             </nav>
@@ -43,7 +47,7 @@
     </header>
     <main>
         <section class="topbar-gamespage">
-            <section id="top-section-games-page"></section>
+            <div id="top-section-games-page"></div>
             <h2 class="h2-item-topbar">Explore our categories:</h2>
         </section>
 
@@ -60,33 +64,33 @@
             </nav>
         </section>
 
-        <Section class="h1heading-gamespage">
+        <section class="h1heading-gamespage">
             <h1>Our games:</h1>
-        </Section>
+        </section>
 
 
-        <div class="container-games-page "> </div>
+        <div class="container-games-page"> </div>
         <div class="message-container"></div>
 
 
     </main>
     <footer>
         <section class="contact-info-footer">
-            <Section class="contact-text-footer">
-                <Section class="info-footer">
+            <section class="contact-text-footer">
+                <section class="info-footer">
                     <p class="text-footer">Address:</p>
                     <p class="text-footer">1234 Street,Town </p>
                     <p class="text-footer">State, 09765, Country</p>
-                </Section>
-                <Section class="info-footer">
+                </section>
+                <section class="info-footer">
                     <p class="text-footer">Email:</p>
                     <p class="text-footer">post@gamehub.com</p>
-                </Section>
-                <Section class="info-footer">
+                </section>
+                <section class="info-footer">
                     <p class="text-footer">Phone:</p>
                     <p class="text-footer">09645725</p>
-                </Section>
-            </Section>
+                </section>
+            </section>
 
             <section class="social-media">
                 <nav class="footer-social">
