--- a/product-page.html
+++ b/product-page.html
@@ -9,6 +9,10 @@
     <link rel="stylesheet" href="css/styles.css">
     <script src="https://kit.fontawesome.com/f6ecbff17b.js" crossorigin="anonymous"></script>
     <title>Gamehub | Game | Racing</title>
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+    <link rel="manifest" href="/site.webmanifest">
     <!-- Hotjar Tracking Code for https://gamehub-interaction-design.netlify.app/ -->
     <script>
         (function (h, o, t, j, a, r) {
