added preview of shopping cart and added span-tag which matches shopping cart

--- a/checkout-page.html
+++ b/checkout-page.html
@@ -39,7 +39,7 @@
             </nav>
             <a href="index.html"><img src="images/GameHub_Logo.png" alt="gamehub logo" class="logo-header"></a>
             <a href="checkout-page.html"><i class="fa-solid fa-cart-shopping fa-xl icon-cart view-cart"><span
-                        class="shopping-cart">0</span></i></a>
+                        class="shopping-cart" id="cart-counter">0</span></i></a>
             <a href=" contact.html"><i class="fa-regular fa-user fa-xl icon-user"></i></a>
             </div>
         </section>
@@ -101,7 +101,7 @@
                 <div class="discount-container">
                     <form action="POST">
                         <input class="discount-input" type="text" name="discountcode" placeholder="Enter discount code">
-                        <a href="checkout-sucess.html" class="cta-discount discount-input">Apply</a>
+                        <a href="checkout-page.html" class="cta-discount discount-input">Apply</a>
                     </form>
                 </div>
                 <div class="cart-container checkout-summary"></div>
@@ -153,7 +153,7 @@
     </footer>
 
     <script type="module" src="js/shoppingCart.js"></script>
-
+    <script type="module" src="js/productPage.js"></script>
 </body>
 
 </html>
