--- a/index.html
+++ b/index.html
@@ -39,8 +39,8 @@
                 <a href="about.html">About</a>
             </nav>
             <a href="/"><img src="images/GameHub_Logo.png" alt="gamehub logo" class="logo-header"></a>
-            <a href="checkout-page.html"><i class="fa-solid fa-cart-shopping fa-xl icon-cart"><span
-                        class="shopping-cart">0</span></i></a>
+            <a href="checkout-page.html"><i class="fa-solid fa-cart-shopping fa-xl icon-cart view-cart"><span
+                        class="shopping-cart" id="cart-counter">0</span></i></a>
             <a href=" contact.html"><i class="fa-regular fa-user fa-xl icon-user"></i></a>
         </section>
     </header>
@@ -105,6 +105,7 @@
     </footer>
 
     <script type="module" src="js/index.js"></script>
+    <script type="module" src="js/productPage.js"></script>
 </body>
 
 </html>
