--- a/contact.html
+++ b/contact.html
@@ -39,7 +39,7 @@
             </nav>
             <a href="index.html"><img src="images/GameHub_Logo.png" alt="gamehub logo" class="logo-header"></a>
             <a href="checkout-page.html"><i class="fa-solid fa-cart-shopping fa-xl icon-cart view-cart"><span
-                        class="shopping-cart">0</span></i></a>
+                        class="shopping-cart" id="cart-counter">0</span></i></a>
 
             <a href=" contact.html"><i class="fa-regular fa-user fa-xl icon-user"></i></a>
             </div>
@@ -144,6 +144,8 @@
             </section>
         </section>
     </footer>
+
+    <script type="module" src="js/productPage.js"></script>
 </body>
 
 </html>
