added cart-preview to the other pages. Updated CSS styles for cart-preview

--- a/games.html
+++ b/games.html
@@ -42,7 +42,7 @@
                 <a href="checkout-page.html"><i class="fa-solid fa-cart-shopping fa-xl icon-cart view-cart"><span
                             class="shopping-cart" id="cart-counter">0</span></i></a>
                 <div class="cart-preview" id="cart-preview">
-                    <h4>Shopping Cart</h4>
+                    <h4 class="h4-cart-preview">Shopping Cart</h4>
                     <ul id="cart-items"></ul>
                 </div>
             </div>
