fixed a null error, moved button in checkout-preview

--- a/index.html
+++ b/index.html
@@ -45,6 +45,8 @@
                 <div class="cart-preview" id="cart-preview">
                     <h4 class="h4-cart-preview">Shopping Cart</h4>
                     <ul id="cart-items"></ul>
+                    <div class="checkout-button-preview"><a href="checkout-page.html"
+                            class="checkout-button">Checkout</a></div>`
                 </div>
             </div>
             <a href=" contact.html"><i class="fa-regular fa-user fa-xl icon-user"></i></a>
