--- a/games.html
+++ b/games.html
@@ -44,6 +44,8 @@
                 <div class="cart-preview" id="cart-preview">
                     <h4 class="h4-cart-preview">Shopping Cart</h4>
                     <ul id="cart-items"></ul>
+                    <div class="checkout-button-preview"><a href="checkout-page.html"
+                            class="checkout-button">Checkout</a></div>`
                 </div>
             </div>
 
